# agent-command-receipt

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: passing-receipt.json
src/agent_command_receipt/: __init__.py  cli.py
tests/: test_cli.py
